src/objects/BMCServiceDesk__WebAPIJob__c.object
<CustomObject>
    <description>Stores the Web API Job records that are created after applying the web API configuration on the Task object.</description>
    <fields>
        <fullName>BMCServiceDesk__FailedResponse__c</fullName>
        <inlineHelpText>This field stores service response if a request fails.</inlineHelpText>
        <label>Failed Response</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__RetryCount__c</fullName>
        <inlineHelpText>Number of times a failed request can be called.</inlineHelpText>
        <label>Retry Count</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Status__c</fullName>
        <inlineHelpText>Stores the current status of an API job.</inlineHelpText>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Created</fullName>
                </value>
                <value>
                    <fullName>Failure</fullName>
                </value>
                <value>
                    <fullName>Success</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__SuccessResponse__c</fullName>
        <inlineHelpText>This field stores service response if a request is successful.</inlineHelpText>
        <label>Success Response</label>
        <length>30000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Task__c</fullName>
        <inlineHelpText>Specifies the task to which the API job is associated.</inlineHelpText>
        <label>Task</label>
        <referenceTo>BMCServiceDesk__Task__c</referenceTo>
        <relationshipLabel>Web API Jobs</relationshipLabel>
        <relationshipName>WebAPI_Jobs</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__WebAPIConfiguration__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Specifies the  web API configuration to which the API job is associated.</inlineHelpText>
        <label>Web API Configuration</label>
        <referenceTo>BMCServiceDesk__WebAPIConfiguration__c</referenceTo>
        <relationshipLabel>Web API Jobs</relationshipLabel>
        <relationshipName>WebAPI_Jobs</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Web API Job</label>
    <listViews>
        <fullName>BMCServiceDesk__All</fullName>
        <columns>NAME</columns>
        <columns>BMCServiceDesk__WebAPIConfiguration__c</columns>
        <columns>BMCServiceDesk__Status__c</columns>
        <columns>BMCServiceDesk__FailedResponse__c</columns>
        <columns>BMCServiceDesk__SuccessResponse__c</columns>
        <columns>BMCServiceDesk__RetryCount__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>WebAPI Job-{0000}</displayFormat>
        <label>Web API Job Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Web API Jobs</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>